syntax = "proto3";

package greet;

option go_package = "github.com/adenierosorto/grpc-go/greet/proto";

// message Dummy{
//     uint32 id = 1;
// }

// service DummyService{
    
// }


message GreetRequest {
    string fisrt_name = 1;
}

message GreetResponse {
    string result = 1;
}

service GreetService{
    rpc Greet (GreetRequest) returns (GreetResponse);
    rpc GreetManyTimes (GreetRequest) returns (stream GreetResponse);
}